--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -179,6 +179,7 @@
     grid-template-columns: 1fr;     /* single column */
     gap: 1.25rem;
     border-radius: 10px;
+    /* border: 2px solid red; */
   }
 
   .container p {
@@ -191,13 +192,20 @@
   }
 
   .sliding-card {
-    margin: -15% 0%;
+    height: 500px;
+    margin-top: -43%;
   }
 
   .box img {
+    display: block;
+    margin-left: auto;
+    margin-right: 10%;
     max-width: 100%;
-    margin: 0;
-    border-radius: 8px;
+    max-width: 300px;
+  }
+
+  .title-extra {
+    margin-top: 0ch;
   }
 
   .title {
@@ -219,14 +227,14 @@
 
   .fade-in-right {
     opacity: 0;
-    transform: translateX(80px);
+    transform: translateX(20px);
     transition: opacity .9s ease-out,
                 transform .9s cubic-bezier(0.22,1,0.36,1);
   }
 
   .fade-in-left {
     opacity: 0;
-    transform: translateX(-80px);
+    transform: translateX(-20px);
     transition: opacity .9s ease-out,
                 transform .9s cubic-bezier(0.22,1,0.36,1);
   }
