--- a/src/styles/VerticalCard.css
+++ b/src/styles/VerticalCard.css
@@ -249,9 +249,16 @@
     margin-bottom: -5%;
   }
 
+  .vertical-box {
+    height: 400px;
+    /* border: 2px solid red; */
+  }
+
   .vertical-imgbox video{
-    height: 250px;
+    height: 300px;
     border-radius: 10px;
+    width: 350px;
+    /* border: 2px solid red; */
   } 
 
   /* center titles */
